--- a/GE.WebAdmin/Views/Manuals/Index.cshtml
+++ b/GE.WebAdmin/Views/Manuals/Index.cshtml
@@ -1,154 +1,10 @@
-﻿@{
-    ViewBag.Title = "FAQ";
+﻿@model VMManual[]
+@{
+    ViewBag.Title = "Справочные материалы";
 }
 
 <h2>@ViewBag.Title</h2>
-
-<div class="manuals">
-    <div class="row">
-        <div class="col-md-2 scrollspy">
-            <ul id="nav" class="list-unstyled hidden-xs hidden-sm" data-spy="affix">
-                <li>
-                    <a href="#news-rubrics"> Рубрики новостей</a>
-                </li>
-                <li>
-                    <a href="#user-roles"> Система доступа</a>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#user-roles">Роли</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#metatags">SEO оптимизация</a>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#metatags">Метатеги</a>
-                        </li>
-                        <li>
-                            <a href="#301redirect">301 редирект</a>
-                        </li>
-                        <li>
-                            <a href="#robotstxt">robots.txt</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#clicks">Статистика кликов</a>
-                    <ul class="list-unstyled">
-                        <li>
-                            <a href="#statclickstypes"></a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="col-md-10">
-            <div class="html">
-                <section>
-                    <div id="news-rubrics">
-                        <h2 class="text-primary">Рубрики новостей</h2>
-                        <p>Новости сайта разделены по  группам. Первыми представлны новости сайта, содержащие описания новостей игр. Новости прицеплены к игре. В левом блоке указаны по одной новости для каждой конкретной игры. </p>
-                        <p>Вторая группа новостей - это, новости, разбитые на рубрики. Рубрики формируются динамически и задаются в админке. Чтобы новость была привязана к конкретной рубрике, для нее при редактировании эту рубрику нужно указать. В левом блоке новостей игр содержаться последние новости для соответствующей рубрики. Правый блок формируется на основе сгруппированного списка тегов материалов, которыми наделены новости данной рубрики (показываются последние n штук). Картинка для новостей в правом блоке задаются равными картинке последней новости для тега, для которого отображается новость.</p>
-                    </div>
-                </section>
-                <section>
-                    <div id="user-roles">
-                        <h2 class="text-primary">Система доступа</h2>
-                        <h3>Роли</h3>
-                        <p>Каждый зарегистрированный пользователь сайта по-умолчанию наследует роль "user". Данная роль предоставляет возвможность комментировать материалы, оставлять лайки и пр. Все роли и права пользователей, наследуемых от этих ролей представлены в таблице ниже:</p>
-                        <table class="table table-striped table-bordered table-condensed">
-                            <caption>Роли пользователей</caption>
-                            <thead>
-                                <tr>
-                                    <th>Роль</th>
-                                    <th>Назначение роли</th>
-                                    <th>Права пользователя роли</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>architect</td>
-                                    <td>Модератор сайта</td>
-                                    <td>Предоставлены неограниченные возможности</td>
-                                </tr>
-                                <tr>
-                                    <td>admin</td>
-                                    <td>Администратор сайта</td>
-                                    <td>Предоставлены неограниченные возможности, кроме доступа к конструктору меню сайта и seo</td>
-                                </tr>
-                                <tr>
-                                    <td>author</td>
-                                    <td>Автор материалов сайта</td>
-                                    <td>Создание, редактирование, материалов. Доступа к изменению канонических ссылок нет</td>
-                                </tr>
-                                <tr>
-                                    <td>seo</td>
-                                    <td>seo специалист</td>
-                                    <td>Любые операции по seo оптимизации сайта</td>
-                                </tr>
-                                <tr>
-                                    <td>user</td>
-                                    <td>Пользователь сайта</td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </section>
-                <section>
-                    <div id="metatags">
-                        <h2 class="text-primary">SEO оптимизация</h2>
-                        <h3>Метатеги</h3>
-                        <p>
-                            Метатеги задаются отдельно для каждой страницы.
-                        </p>
-                        <p>
-                            Для каждого адреса можно задать <mark>title</mark>, <mark>description</mark> и <mark>keywords</mark>.
-                        </p>
-                        <p>
-                            Теги считываются каждый раз при обращении к странице сайта и кешируются на 15 мин. В связи с кешированием, время изменения тегов на целевой странице может составить до 15 минут.
-                        </p>
-                        <p>Для материалов формирование <mark>title</mark> происходит автоматически при создании материала. Вместо тега <mark>description</mark> для материалов при отображения на страницах сайта используется поле <code>Foreword</code>. </p>
-                        <p>Теги можно задать для любой страницы сайта, задав локальный адрес страницы в качестве адреса страницы отслеживания в разделе @Html.ActionLink("редактирования", MVC.SeoInfo.Index())  страниц отслеживания ("SEO оптимизация" - "Метатеги")</p>
-                    </div>
-
-                    <div id="301redirect">
-                        <h3>301 редирект</h3>
-                        <p>Постоянное перенаправление применяется при изменении адреса целевых страниц сайта и задается в разделе @Html.ActionLink("301 редирект", MVC.Redirects.Index()).<p>
-                        <p>Для того, чтобы при обращении к перемещенным на новые <mark>url</mark> страницам сайта вместо 404 ошибки происходил редирект на новое расположение страницы, необходимо добавить их в данном разделе.</p>
-                        <p>Операцию добавления страниц для редиректа необходимо проводить после каждого изменения <mark>url</mark> материалов.</p>
-                    </div>
-
-                    <div id="robotstxt">
-                        <h3>robots.txt</h3>
-                        <p>@Html.ActionLink("Применяется", MVC.Settings.EditRobotsFile()) для управления индексированием сайта поисковыми системами.</p>
-                        <p>Изменения в файле вступаю в силу в течение 15 мин.</p>
-                    </div>
-                </section>
-                <section>
-                    <div id="clicks">
-                        <h2 class="text-primary">Статистика кликов</h2>
-                        <p>Применяется для отслеживания поведения пользователей, проходящих по тем или иным ссылкам.</p>
-                        <p>Отслеживать можно любое подведение, задав тип статистики кликов.</p>
-                    </div>
-                </section>
-            </div>
-        </div>
-    </div>
+<br />
+<div id="grid-manuals">
+    @Html.Partial(MVC.Manuals.Views._GridView, Model)
 </div>
-
-@section scripts{
-    <script type="text/javascript">
-        $(function () {
-            $('body').attr('data-spy', 'scroll');
-            $('body').attr('data-target', '.scrollspy');
-
-            $('#nav').affix({
-                offset: {
-                    top: $('#nav').offset().top
-                }
-            });
-        });
-    </script>
-}
