--- a/GE.WebAdmin/Content/sx/less/sx-tree-view.less
+++ b/GE.WebAdmin/Content/sx/less/sx-tree-view.less
@@ -13,7 +13,13 @@ border-left: none;
 }
 
 .sx-tv .edit-col, .sx-tv .create-col {
-    width: 0;
+    width: 50px;
+    text-align:center;
+}
+
+.sx-tv .edit-col a{
+    float:left;
+    margin-left: 5px;
 }
 
 .sx-tv .create-col{
