--- a/GE.WebAdmin/Views/Account/Login.cshtml
+++ b/GE.WebAdmin/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model VMLoginModel
+﻿@model SX.WebCore.ViewModels.SxVMLogin
 @{
     Layout = null;
 }
@@ -21,26 +21,42 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <style type="text/css">
+        html, body{
+            height:100%;
+        }
+        .form-block{
+            display:table;
+            height:100%;
+            margin:0 auto;
+        }
+        .form-signin {
+            width: 430px;
+            display: table-cell;
+            vertical-align: middle;
+        }
+    </style>
 </head>
 <body>
-    
-    <form class="form-signin" method="post" action="@Url.Action(MVC.Account.Login())">
-        @Html.AntiForgeryToken()
+    <div class="form-block">
+        <form class="form-signin" method="post" action="@Url.Action(MVC.Account.Login())">
+            @Html.AntiForgeryToken()
 
-        <h2 class="form-signin-heading">@Constants.AppName</h2>
-        <br />
-        @Html.LabelFor(x => x.Email, new { @class = "sr-only" })
-        @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Адрес электронной почты" } })
-        @Html.ValidationMessageFor(x => x.Email)
-        <br />
-        @Html.LabelFor(x => x.Password, new { @class = "sr-only" })
-        @Html.EditorFor(x => x.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Пароль" } })
-        @Html.ValidationMessageFor(x => x.Password)
-        <br />
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
-        <br />
-        <a href="mailto:simlex.dev.2014@gmail.com" class="text-muted small pull-right">Связаться с разработчиком</a>
-    </form>
+            <h2 class="form-signin-heading">@Constants.AppName</h2>
+            <br />
+            @Html.LabelFor(x => x.Email, new { @class = "sr-only" })
+            @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Адрес электронной почты" } })
+            @Html.ValidationMessageFor(x => x.Email)
+            <br />
+            @Html.LabelFor(x => x.Password, new { @class = "sr-only" })
+            @Html.EditorFor(x => x.Password, new { htmlAttributes = new { @class = "form-control", @placeholder = "Пароль" } })
+            @Html.ValidationMessageFor(x => x.Password)
+            <br />
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
+            <br />
+            <a href="mailto:simlex.dev.2014@gmail.com" class="text-muted small pull-right">Связаться с разработчиком</a>
+        </form>
+    </div>
     <script src="~/Content/dist/js/site.min.js"></script>
 </body>
 </html>
