--- a/GE.WebAdmin/Views/ManualGroups/_TreeView.cshtml
+++ b/GE.WebAdmin/Views/ManualGroups/_TreeView.cshtml
@@ -15,9 +15,7 @@
         FuncEditUrl = x => Url.Action(MVC.ManualGroups.Edit(id: x.Id)),
         MaxLevel = maxLevel,
         FuncSearchUrl = () => Url.Action(MVC.ManualGroups.Index()),
-        UpdateTargetId = "mg-tv",
-        EnableEditing = true,
-        EnableFiltering = true
+        FuncModelId=x=>x.Id
     },
     htmlAttributes: new { @class = "sx-tv table table-condensed table-bordered table-responsive" }
     )
