--- a/GE.WebAdmin/Views/Manuals/Edit.cshtml
+++ b/GE.WebAdmin/Views/Manuals/Edit.cshtml
@@ -2,7 +2,7 @@
 @{
     var isNew = Model.Id == 0;
     ViewBag.Title = isNew ? "Добавить справочный материал" : "Редактировать справочный материал \"" + Model.Title + "\"";
-    ViewBag.ManualGroupId = isNew ? null : Model.Group.Title;
+    ViewBag.MaterialCategoryTitle = isNew || Model.CategoryId == null ? null : Model.Category.Title;
 }
 
 <h2>@ViewBag.Title</h2>
@@ -42,9 +42,9 @@
                     @Html.ValidationMessageFor(x => x.Title)
                 </div>
                 <div class="col-md-4">
-                    @Html.LabelFor(x => x.GroupId, new { @class = "control-label" })
-                    @Html.EditorFor(x => x.GroupId, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите название материала" } })
-                    @Html.ValidationMessageFor(x => x.GroupId)
+                    @Html.LabelFor(x => x.CategoryId, new { @class = "control-label" })
+                    @Html.EditorFor(x => x.CategoryId, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите название материала" } })
+                    @Html.ValidationMessageFor(x => x.CategoryId)
                 </div>
             </div>
             <br />
