--- a/GE.WebAdmin/Views/MaterialTags/_GridView.cshtml
+++ b/GE.WebAdmin/Views/MaterialTags/_GridView.cshtml
@@ -31,7 +31,7 @@
         {
             UpdateTargetId = "grid-mat-tags",
             Data = Model,
-            Columns = new SxExtantions.SxGridViewColumn[]{ new SxExtantions.SxGridViewColumn{
+            Columns = new SxExtantions.SxGridViewColumn<VMMaterialTag>[]{ new SxExtantions.SxGridViewColumn<VMMaterialTag>{
                 FieldName ="Id",
                 Caption ="Значение"
             } },
