--- a/GE.WebAdmin/Views/SeoKeywords/_GridView.cshtml
+++ b/GE.WebAdmin/Views/SeoKeywords/_GridView.cshtml
@@ -27,8 +27,8 @@
             {
                 UpdateTargetId = "seo-kw",
                 Data = Model,
-                Columns = new SxExtantions.SxGridViewColumn[]{
-            new SxExtantions.SxGridViewColumn{FieldName="Value", Caption="Ключевое слово"}
+                Columns = new SxExtantions.SxGridViewColumn<VMSeoKeyword>[]{
+            new SxExtantions.SxGridViewColumn<VMSeoKeyword>{FieldName="Value", Caption="Ключевое слово"}
         },
                 PagerInfo=pagerInfo,
                 Filter = filter,
