--- a/GE.WebAdmin/Views/Pictures/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Pictures/_GridView.cshtml
@@ -12,12 +12,12 @@
     {
         UpdateTargetId = "grid-pictures",
         Data = Model,
-        Columns = new SxExtantions.SxGridViewColumn[]{
-            new SxExtantions.SxGridViewColumn{FieldName="Id", Caption="Идентификатор"},
-            new SxExtantions.SxGridViewColumn{FieldName="Caption", Caption="Название"},
-            new SxExtantions.SxGridViewColumn{FieldName="Description", Caption="Описание"},
-            new SxExtantions.SxGridViewColumn{FieldName="Width", Caption="Ширина, px"},
-            new SxExtantions.SxGridViewColumn{FieldName="Height", Caption="Высота, px"},
+        Columns = new SxExtantions.SxGridViewColumn<VMPicture>[]{
+            new SxExtantions.SxGridViewColumn<VMPicture>{FieldName="Id", Caption="Идентификатор"},
+            new SxExtantions.SxGridViewColumn<VMPicture>{FieldName="Caption", Caption="Название"},
+            new SxExtantions.SxGridViewColumn<VMPicture>{FieldName="Description", Caption="Описание"},
+            new SxExtantions.SxGridViewColumn<VMPicture>{FieldName="Width", Caption="Ширина, px"},
+            new SxExtantions.SxGridViewColumn<VMPicture>{FieldName="Height", Caption="Высота, px"},
         },
         PagerInfo=pagerInfo,
         Filter = filter,
