--- a/GE.WebAdmin/Views/Redirects/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Redirects/_GridView.cshtml
@@ -12,9 +12,9 @@
             {
                 UpdateTargetId = "grid-301-redirect",
                 Data = Model,
-                Columns = new SxExtantions.SxGridViewColumn[]{
-            new SxExtantions.SxGridViewColumn{FieldName="OldUrl", Caption="Старый адрес"},
-            new SxExtantions.SxGridViewColumn{FieldName="NewUrl", Caption="Новый адрес"}
+                Columns = new SxExtantions.SxGridViewColumn<VMRedirect>[]{
+            new SxExtantions.SxGridViewColumn<VMRedirect>{FieldName="OldUrl", Caption="Старый адрес"},
+            new SxExtantions.SxGridViewColumn<VMRedirect>{FieldName="NewUrl", Caption="Новый адрес"}
         },
                 PagerInfo = pagerInfo,
                 Filter = filter,
