--- a/GE.WebAdmin/Views/Routes/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Routes/_GridView.cshtml
@@ -12,10 +12,10 @@
     {
         UpdateTargetId = "grid-routes",
         Data = Model,
-        Columns = new SxExtantions.SxGridViewColumn[]{
-            new SxExtantions.SxGridViewColumn{FieldName="Name", Caption="Наименование маршрута"},
-            new SxExtantions.SxGridViewColumn{FieldName="Controller", Caption="Контроллер"},
-            new SxExtantions.SxGridViewColumn{FieldName="Action", Caption="Действие"},
+        Columns = new SxExtantions.SxGridViewColumn<VMRoute>[]{
+            new SxExtantions.SxGridViewColumn<VMRoute>{FieldName="Name", Caption="Наименование маршрута"},
+            new SxExtantions.SxGridViewColumn<VMRoute>{FieldName="Controller", Caption="Контроллер"},
+            new SxExtantions.SxGridViewColumn<VMRoute>{FieldName="Action", Caption="Действие"},
         },
         PagerInfo=pagerInfo,
         Filter = filter,
