--- a/GE.WebAdmin/Views/Request/_GridView.cshtml
+++ b/GE.WebAdmin/Views/Request/_GridView.cshtml
@@ -18,7 +18,7 @@
             new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="Browser", Caption="Браузер"},
             new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="ClientIP", Caption="IP клиента"},
             new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="UserAgent", Caption="Строка агента", Template=(m)=> {
-                return m.UserAgent.Contains("bot")?string.Format("<i class=\"text-danger\">{0}</i>",m.UserAgent):m.UserAgent;
+                return m.UserAgent.Contains("bot") || m.UserAgent.Contains("Yahoo! Slurp") || m.UserAgent.Contains("spider")?string.Format("<i class=\"text-danger\">{0}</i>",m.UserAgent):m.UserAgent;
             } },
             new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="RequestType", Caption="Тип запросв"},
             new SxExtantions.SxGridViewColumn<VMRequest>{FieldName="UrlRef", Caption="UrlRef",Template=(m)=> {
