seo word counter

--- a/GE.WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GE.WebAdmin/Views/Shared/_Layout.cshtml
@@ -348,6 +348,9 @@
                                 <li>
                                     <a href="@Url.Action(MVC.Settings.EditRobotsFile())"><i class="fa fa-ship"></i> robot.txt</a>
                                 </li>
+                                <li>
+                                    <a href="@Url.Action(MVC.SeoWordCounter.Index())"><i class="fa fa-compress"></i> Счетчик слов</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
