--- a/GE.WebAdmin/Content/less/signin.less
+++ b/GE.WebAdmin/Content/less/signin.less
@@ -2,6 +2,20 @@
 @import "sb-admin-2.less";
 @import "bootstrap-ext.less";
 
+.form-block {
+    display: table;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.form-signin {
+    width: 430px;
+    display: table-cell;
+    vertical-align: middle;
+    max-width:100%;
+    padding:0 15px;
+}
+
 .validation-summary-errors > ul {
     list-style: none;
     padding: 0;
@@ -10,5 +24,5 @@
 
 .form-signin .field-validation-error {
     display: inline-block;
-    margin-bottom:10px;
+    margin-bottom: 10px;
 }
